# transaction_categorizer

./: .gitignore  .gitmodules  makefile  pyproject.toml  readme.md  ruff.toml
.githooks/: pre-commit
categorizer_service/: main.py
categorizer_service/inference/cat/: predict.py  train.py
src/: cat-model.py  main.py  models.py
src/inference/cat/: __init__.py  predict.py  train.py
src/inference/cat/state/: category_encoder.pkl  payee_vectorizer.pkl
tests/: test_inference_cat_predict.py  test_inference_cat_train.py  test_main_route_handlers.py
transaction_categorizer/: main.py  models.py
transaction_categorizer/inference/cat/: __init__.py  paths.py  predict.py  train.py
transaction_categorizer/inference/cat/state/: hyperparams.json  payee_vectorizer.pkl
