[project]
name = "transaction_categorizer"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.129.0",
    "pandas>=3.0.1",
    "scikit-learn>=1.8.0",
    "uvicorn>=0.40.0",
    "xgboost>=3.2.0",
]

[dependency-groups]
dev = [
    "ruff>=0.15.4",
]
