[project]
name = "transaction_categorizer"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.129.0",
    "optuna>=4.8.0",
    "pandas>=3.0.1",
    "scikit-learn>=1.8.0",
    "uvicorn>=0.40.0",
    "xgboost>=3.2.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.2",
    "pytest-mock>=3.15.1",
    "ruff>=0.15.4",
]

[build-system]                                                                                                         
requires = ["uv_build>=0.11.2,<0.12"]                                                                                  
build-backend = "uv_build"                                                                                             

[tool.uv.build-backend]                                                                                                
module-root = ""
